force-app/main/default/objects/Mosaic_Opportunity_Management_Mapping__mdt/Mosaic_Opportunity_Management_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Mosaic Opportunity Management Mapping</label>
    <pluralLabel>Mosaic Opportunity Management Mappings</pluralLabel>
</CustomObject>