force-app/main/default/objects/Mosaic_Opportunity_Management_Mapping__mdt/fields/Mosaic_Rep_Id__c.field-meta.xml
<CustomField>
    <fullName>Mosaic_Rep_Id__c</fullName>
    <label>Mosaic Rep Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>