force-app/main/default/objects/Mosaic_Opportunity_Management_Mapping__mdt/fields/Mosaic_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Mosaic_Rep_Name__c</fullName>
    <label>Mosaic Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>