force-app/main/default/objects/Mosaic_Opportunity_Management_Mapping__mdt/fields/Mosaic_SE_Id__c.field-meta.xml
<CustomField>
    <fullName>Mosaic_SE_Id__c</fullName>
    <label>Mosaic SE Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>