force-app/main/default/objects/Mosaic_Opportunity_Management_Mapping__mdt/fields/Opportunity_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Region__c</fullName>
    <label>Opportunity Owner Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Northeast</fullName>
                <default>true</default>
                <label>Northeast</label>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
            <value>
                <fullName>N. Central</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>SEUR</fullName>
            </value>
            <value>
                <fullName>UK/Ireland/Middle East &amp; Africa</fullName>
            </value>
            <value>
                <fullName>NEUR</fullName>
            </value>
            <value>
                <fullName>CEUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>